# scriptz-cli

./: .env  .travis.yml  Cargo.toml  cross-compilation.md  install.sh
.github/workflows/: github-actions.yml  learn-github-actions.yml
ci/: aarch64.Dockerfile  arm7.Dockerfile  armv7.Dockerfile  build.sh  deploy.sh  install.sh
install/: env  install.sh
scripts/: deploy.sh
src/: get-app.rs  main.rs
