[package]
name = "scriptz"
version = "0.1.0"
authors = ["Zane Hitchcox <zwhitchcox@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.3"
http = "0.2.3"
hyper = "0.13.5"
reqwest = { version = "0.11.1", features = ["json"] }
rpassword = "5.0.1"
serde_json = "1.0.64"
structopt = "0.3.13"
tempfile = "3.2.0"
tokio = { version = "1", features = ["macros", "io-util", "full"] }
webbrowser = { git = "https://github.com/codota/webbrowser-rs", branch = "feature/add-suppress-output-flag-with-docs" }
